# sdk-python

./: .gitignore  .svu.yml  README.md  make_release  mise.toml  pyproject.toml  test_fetchurl.py  test_fetchurl_integration.py
.github/workflows/: autorelease.yml
fetchurl/: __init__.py
