[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fetchurl-sdk"
version = "0.2.2"
description = "Protocol-level client SDK for fetchurl content-addressable cache servers"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
license = { text = "MIT" }
authors = [{ name = "lucasew" }]
keywords = ["fetchurl", "cache", "content-addressable", "hash", "sha256"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://pypi.org/project/fetchurl-sdk/"
Repository = "https://github.com/fetchurl/sdk-python"
"Bug Tracker" = "https://github.com/fetchurl/sdk-python/issues"

[project.optional-dependencies]
test = ["testcontainers>=3.7.0", "httpx>=0.27.0"]

[tool.hatch.build.targets.wheel]
packages = ["fetchurl"]
